@@ -219,11 +219,7 @@ push(@got, "spam") if ($has_spam);
 push(@got, "virus") if ($has_virus);
 
 # Tell the user what we have got
-local %pconfig = map { $_, 1 } @feature_plugins;
-@got = grep { $config{$_} || $pconfig{$_} } @got;
-&$second_print(".. found ".
-	       join(", ", map { $text{'feature_'.$_} ||
-				&plugin_call($_, "feature_name") } @got).".");
+@got = &show_check_migration_features(@got);
 local %got = map { $_, 1 } @got;
 
 # Work out user and group IDs
