@@ -919,3 +919,4 @@ Updated the SugarCRM installer to 5.0.0e, ZenPhoto to 1.1.6, and Piwik to 0.1.9.
 Modified the 'View website via Webmin' feature to not munge offsite links, only those to the same domain.
 The number of email messages delivered per minute and the number classified as spam or viruses can now be graphed on the System Statistics page.
 Added links from the Status section of the System Information page to the Webmin modules for their particular servers, and additional stats where available.
+If a migrated domain needs features that are not supported by the system, a warning message is displayed.
